# setuptools-pybind11

./: .gitignore  .gitmodules  README.md  pyproject.toml  setuptools_pybind11.py
example-project/: CMakeLists.txt  MANIFEST.in  README.md  build.bat  build.sh  pyproject.toml  setup.py
example-project/example-dep/: CMakeLists.txt  dep.cpp  dep.h
example-project/src/: myModule.cpp
