[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.distutils.egg_info]
egg_base = "build"


[project]
name = "setuptools-pybind11"
version = "0.3.1"
authors = [{ name = "Alagyn" }]
description = "Setuptools extension for building pybind11 libraries with CMake"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]

dependencies = ["build", "wheel", "pybind11-stubgen"]

[project.optional-dependencies]
cmake = ["cmake"]

[project.urls]
"Homepage" = "https://github.com/alagyn/setuptools-pybind11"
"Bug Tracker" = "https://github.com/alagyn/setuptools-pybind11/issues"
