[build-system]
requires = [
    "setuptools",
    "wheel",
    #"setuptools-pybind11" should also have this
    "cmake", # shouldn't need this, just use setuptools-pybind11[cmake]
]
build-backend = "setuptools.build_meta"

[project]
name = "example"
version = "0.1.0"
authors = [{ name = "Alagyn" }]
description = "Example pybind11 library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]

dependencies = ["build", "wheel"]

[project.optional-dependencies]
cmake = ["cmake"]

[project.urls]
"Homepage" = "https://github.com/alagyn/setuptools-pybind11"
"Bug Tracker" = "https://github.com/alagyn/setuptools-pybind11/issues"
