[build-system]
requires = [
    "setuptools",
    "wheel",
    # Should only need this
    #"setuptools-pybind11",
    # but we are manually adding further deps here so we can test without
    # needing it to be available on pypi:
    "cmake",
    "pybind11-stubgen",
]
build-backend = "setuptools.build_meta"

[tool.distutils.egg_info]
egg_base = "build"

[project]
name = "example"
version = "0.1.0"
authors = [{ name = "Alagyn" }]
description = "Example pybind11 library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]

dependencies = ["build", "wheel"]

[project.optional-dependencies]
cmake = ["cmake"]

[project.urls]
"Homepage" = "https://github.com/alagyn/setuptools-pybind11"
"Bug Tracker" = "https://github.com/alagyn/setuptools-pybind11/issues"
