[build-system]
requires = [
    "setuptools",
    "wheel",
    # this is required, but commented out so its easier to test locally
    #"setuptools-pybind11[cmake]"
]
build-backend = "setuptools_pybind11"

[tool.distutils.egg_info]
egg_base = "build"

[project]
name = "example"
version = "0.1.0"
authors = [{ name = "Alagyn" }]
description = "Example pybind11 library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]

dependencies = ["build", "wheel"]

[project.optional-dependencies]
cmake = ["cmake"]

[project.urls]
"Homepage" = "https://github.com/alagyn/setuptools-pybind11"
"Bug Tracker" = "https://github.com/alagyn/setuptools-pybind11/issues"

# you can define multiple modules
[tool.setuptools-pybind11.modules.example]
# defaults to this
source_dir = "."
# prefix in build directory to main binary
bin_prefix = ""
# binary dirs for dependencies
dep_bin_prefixes = ["example-dep"]
# include/data directories and their name (placed under [package-name]-[version].inc/path)
inc_dirs = [["example-dep", "example-path"]]
# any additional cmake configs you need
cmake_config_options = ["-DMYCMAKE_OPTION=ON"]
cmake_build_options = ["--MyBuildOption"]
